@@ -17,20 +17,10 @@
 #
 
 ini_set("rom_name",    "Multi-Boot Utilities");
-ini_set("rom_version", "1.0");
+ini_set("rom_version", "2.0");
 ini_set("rom_author",  "Xiao-Long Chen");
-ini_set("rom_device",  "Samsung Galaxy S4");
-ini_set("rom_date",    "2013-09-20");
-
-anisplash(
-    2,
-    "splash/a1", 500,
-    "splash/a2", 30,
-    "splash/a3", 30,
-    "splash/a4", 30,
-    "splash/a5", 30,
-    "splash/a6", 30
-);
+ini_set("rom_device",  "Samsung Galaxy S4 / LG Nexus 5");
+ini_set("rom_date",    "2013-12-26");
 
 # English only for right now
 loadlang("langs/en.lang");
@@ -98,20 +88,15 @@ menubox(
     "@personalize",
     "operations.prop",
 
-    "Reboot",                      "Reboot your device",                                       "@alert",
-    "Exit",                        "Exit to recovery",                                         "@install",
-    "Switch to primary ROM",       "",                                                         "@default",
-    "Switch to secondary ROM",     "",                                                         "@default",
-    "Wipe primary /cache",         "Deletes everything from /cache, except for /cache/dual",   "@default",
-    "Wipe secondary /cache",       "Deletes /cache/dual",                                      "@default",
-    "Wipe primary dalvik cache",   "Deletes /data/dalvik-cache",                               "@default",
-    "Wipe secondary dalvik cache", "Deletes /data/dual/dalvik-cache",                          "@default",
-    "Wipe primary /system",        "Deletes everything from /system, except for /system/dual", "@default",
-    "Wipe secondary /system",      "Deletes /system/dual",                                     "@default",
-    "Wipe primary /data",          "Deletes everything from /data, except for /data/dual and internal SD", "@default",
-    "Wipe secondary /data",        "Deletes /data/dual",                                       "@default",
-    "Save last_kmsg log",          "Copies /proc/last_kmsg to internal SD",                    "@default",
-    "Save recovery log",           "Copies /tmp/recovery.log to internal SD",                  "@default"
+    "Reboot",                  "Reboot your device",                      "@alert",
+    "Exit",                    "Exit to recovery",                        "@install",
+    "Primary",                 "",                                        "@default",
+    "Secondary",               "",                                        "@default",
+    "Multi slot 1",            "",                                        "@default",
+    "Multi slot 2",            "",                                        "@default",
+    "Multi slot 3",            "",                                        "@default",
+    "Save last_kmsg log",      "Copies /proc/last_kmsg to internal SD",   "@default",
+    "Save recovery log",       "Copies /tmp/recovery.log to internal SD", "@default"
 );
 
 # Reboot
@@ -140,88 +125,91 @@ if prop("operations.prop","selected") == "2" then
   endif;
 endif;
 
-# Switch to primary ROM
+setvar("partconfigid", "NONE");
+
 if prop("operations.prop","selected") == "3" then
-  setvar("operation_argument", "force-boot-primary");
-  setvar("operation_title", "Switch to primary ROM");
-  setvar("operation_futuretense", "switch to the primary ROM");
-  setvar("operation_pasttense", "switched to the primary ROM");
+  setvar("partconfigid", "primary");
+  setvar("partconfig", "primary");
 endif;
 
-# Switch to secondary ROM
 if prop("operations.prop","selected") == "4" then
-  setvar("operation_argument", "force-boot-secondary");
-  setvar("operation_title", "Switch to secondary ROM");
-  setvar("operation_futuretense", "switch to the secondary ROM");
-  setvar("operation_pasttense", "switched to the secondary ROM");
+  setvar("partconfigid", "secondary");
+  setvar("partconfig", "secondary");
 endif;
 
-# Wipe primary /cache
 if prop("operations.prop","selected") == "5" then
-  setvar("operation_argument", "wipe-primary-cache");
-  setvar("operation_title", "Wipe primary /cache");
-  setvar("operation_futuretense", "wipe the primary /cache");
-  setvar("operation_pasttense", "wiped the primary /cache");
+  setvar("partconfigid", "multi-slot-1");
+  setvar("partconfig", "multi slot 1");
 endif;
 
-# Wipe secondary /cache
 if prop("operations.prop","selected") == "6" then
-  setvar("operation_argument", "wipe-secondary-cache");
-  setvar("operation_title", "Wipe secondary /cache");
-  setvar("operation_futuretense", "wipe the secondary /cache");
-  setvar("operation_pasttense", "wiped the secondary /cache");
+  setvar("partconfigid", "multi-slot-2");
+  setvar("partconfig", "multi slot 2");
 endif;
 
-# Wipe primary dalvik-cache
 if prop("operations.prop","selected") == "7" then
-  setvar("operation_argument", "wipe-primary-dalvik-cache");
-  setvar("operation_title", "Wipe primary dalvik cache");
-  setvar("operation_futuretense", "wipe the primary dalvik cache");
-  setvar("operation_pasttense", "wiped the primary dalvik cache");
+  setvar("partconfigid", "multi-slot-3");
+  setvar("partconfig", "multi slot 3");
 endif;
 
-# Wipe secondary dalvik-cache
-if prop("operations.prop","selected") == "8" then
-  setvar("operation_argument", "wipe-secondary-dalvik-cache");
-  setvar("operation_title", "Wipe secondary dalvik cache");
-  setvar("operation_futuretense", "wipe the secondary dalvik cache");
-  setvar("operation_pasttense", "wiped the secondary dalvik cache");
-endif;
+# Is there any way to not list it like this?
+if prop("operations.prop","selected") == "3" ||
+   prop("operations.prop","selected") == "4" ||
+   prop("operations.prop","selected") == "5" ||
+   prop("operations.prop","selected") == "6" ||
+   prop("operations.prop","selected") == "7" then
 
-# Wipe primary /system
-if prop("operations.prop","selected") == "9" then
-  setvar("operation_argument", "wipe-primary-system");
-  setvar("operation_title", "Wipe primary /system");
-  setvar("operation_futuretense", "wipe the primary /system");
-  setvar("operation_pasttense", "wiped the primary /system");
-endif;
+  menubox(
+      "<~operations.title> (" + getvar("partconfig") + ")",
+      "<~operations.desc> (" + getvar("partconfig") + ")",
+      "@personalize",
+      "romoperations.prop",
 
-# Wipe secondary /system
-if prop("operations.prop","selected") == "10" then
-  setvar("operation_argument", "wipe-secondary-system");
-  setvar("operation_title", "Wipe secondary /system");
-  setvar("operation_futuretense", "wipe the secondary /system");
-  setvar("operation_pasttense", "wiped the secondary /system");
-endif;
+      "Switch to",         "", "@default",
+      "Wipe /system",      "", "@default",
+      "Wipe /cache",       "", "@default",
+      "Wipe /data",        "", "@default",
+      "Wipe dalvik-cache", "", "@default"
+  );
 
-# Wipe primary /data
-if prop("operations.prop","selected") == "11" then
-  setvar("operation_argument", "wipe-primary-data");
-  setvar("operation_title", "Wipe primary /data");
-  setvar("operation_futuretense", "wipe the primary /data");
-  setvar("operation_pasttense", "wiped the primary /data");
-endif;
+  if prop("romoperations.prop","selected") == "1" then
+    setvar("operation_argument", "switch-to-" + getvar("partconfigid"));
+    setvar("operation_title", "Switch to " + getvar("partconfig"));
+    setvar("operation_futuretense", "switch to " + getvar("partconfig"));
+    setvar("operation_pasttense", "switched to " + getvar("partconfig"));
+  endif;
 
-# Wipe secondary /data
-if prop("operations.prop","selected") == "12" then
-  setvar("operation_argument", "wipe-secondary-data");
-  setvar("operation_title", "Wipe secondary /data");
-  setvar("operation_futuretense", "wipe the secondary /data");
-  setvar("operation_pasttense", "wiped the secondary /data");
+  if prop("romoperations.prop","selected") == "2" then
+    setvar("operation_argument", "wipe-system-" + getvar("partconfigid"));
+    setvar("operation_title", "Wipe /system for " + getvar("partconfig"));
+    setvar("operation_futuretense", "wipe /system for " + getvar("partconfig"));
+    setvar("operation_pasttense", "wiped /system for " + getvar("partconfig"));
+  endif;
+
+  if prop("romoperations.prop","selected") == "3" then
+    setvar("operation_argument", "wipe-cache-" + getvar("partconfigid"));
+    setvar("operation_title", "Wipe /cache for " + getvar("partconfig"));
+    setvar("operation_futuretense", "wipe /cache for " + getvar("partconfig"));
+    setvar("operation_pasttense", "wiped /cache for " + getvar("partconfig"));
+  endif;
+
+  if prop("romoperations.prop","selected") == "4" then
+    setvar("operation_argument", "wipe-data-" + getvar("partconfigid"));
+    setvar("operation_title", "Wipe /data for " + getvar("partconfig"));
+    setvar("operation_futuretense", "wipe /data for " + getvar("partconfig"));
+    setvar("operation_pasttense", "wiped /data for " + getvar("partconfig"));
+  endif;
+
+  if prop("romoperations.prop","selected") == "5" then
+    setvar("operation_argument", "wipe-dalvik-cache-" + getvar("partconfigid"));
+    setvar("operation_title", "Wipe dalvik-cache for " + getvar("partconfig"));
+    setvar("operation_futuretense", "wipe dalvik-cache for " + getvar("partconfig"));
+    setvar("operation_pasttense", "wiped dalvik-cache for " + getvar("partconfig"));
+  endif;
 endif;
 
 # Save last_kmsg log
-if prop("operations.prop","selected") == "13" then
+if prop("operations.prop","selected") == "8" then
   setvar("operation_argument", "save-last-kmsg");
   setvar("operation_title", "Save last_kmsg");
   setvar("operation_futuretense", "save the last_kmsg kernel log");
@@ -229,7 +217,7 @@ if prop("operations.prop","selected") == "13" then
 endif;
 
 # Save recovery log
-if prop("operations.prop","selected") == "14" then
+if prop("operations.prop","selected") == "9" then
   setvar("operation_argument", "save-recovery-log");
   setvar("operation_title", "Save recovery log");
   setvar("operation_futuretense", "save the recovery log");
