@@ -1,17 +1,10 @@
 #!/sbin/sh
 
-# Common AROMA formatting functions
-echo_bold() {
-  echo -n "<b>"
-  echo ${@}
-  echo "</b>"
-}
-
 # Common mounting functions
 BOOT="/dev/block/platform/msm_sdcc.1/by-name/boot"
 SYSTEM="/dev/block/platform/msm_sdcc.1/by-name/system"
-DATA="/dev/block/platform/msm_sdcc.1/by-name/userdata"
 CACHE="/dev/block/platform/msm_sdcc.1/by-name/cache"
+DATA="/dev/block/platform/msm_sdcc.1/by-name/userdata"
 
 unmount_system() {
   umount /system &>/dev/null || true
@@ -20,15 +13,6 @@ unmount_system() {
 mount_system() {
   unmount_system
   mount $SYSTEM /system
-}
-
-unmount_data() {
-  umount /data &>/dev/null || true
-}
-
-mount_data() {
-  unmount_data
-  mount $DATA /data
 }
 
 unmount_cache() {
@@ -40,149 +24,194 @@ mount_cache() {
   mount $CACHE /cache
 }
 
+unmount_data() {
+  umount /data &>/dev/null || true
+}
+
+mount_data() {
+  unmount_data
+  mount $DATA /data
+}
+
 write_kernel() {
-  dd if=$1 of=$BOOT || \
-    { echo "Failed to write kernel" && return 1 }
+  dd if=$1 of=$BOOT || {
+    echo "Failed to write kernel" && return 1
+  }
 }
 
 read_kernel() {
-  dd if=$BOOT of=$1 || \
-    { echo "Failed to write kernel" && return 1 }
+  dd if=$BOOT of=$1 || {
+    echo "Failed to write kernel" && return 1
+  }
 }
 
-force_boot_primary() {
+switch_to() {
   mount_system
   local EXIT
 
-  if [ ! -f /system/dual-kernels/primary.img ]; then
-    echo "There's no kernel for the primary ROM. Did you remember to set the kernel in the Dual Boot Switcher app? You will need to flash a kernel for the primary ROM in order to boot it again."
+  if [ ! -f /system/dual-kernels/$1.img ]; then
+    echo "There's no kernel for the $1 ROM. Did you remember to set the kernel in the Dual Boot Switcher app? You will need to flash a kernel for the $1 ROM in order to boot it again."
+  elif ! write_kernel /system/dual-kernels/$1.img; then
+    echo "Failed to write kernel to boot partition."
     EXIT=1
   else
-    if ! write_kernel /system/dual-kernels/primary.img; then
-      echo "Failed to write kernel to boot partition!"
-      EXIT=1
-    else
-      echo "Successfully switched to the primary ROM!"
-      EXIT=0
-    fi
+    echo "Successfully switched to the $1 ROM."
+    EXIT=0
   fi
 
   unmount_system
   exit $EXIT
 }
 
-force_boot_secondary() {
+wipe_system() {
   mount_system
-  local exit
-
-  if [ ! -f /system/dual-kernels/secondary.img ]; then
-    echo "There's no kernel for the secondary ROM. Is there a secondary ROM installed? You may need to reinstall the secondary ROM (or just flash the kernel for it)."
-    EXIT=1
-  else
-    if ! write_kernel /system/dual-kernels/secondary.img; then
-      echo "Failed to write kernel to boot partition!"
-      EXIT=1
-    else
-      echo "Successfully switched to the secondary ROM!"
-      EXIT=0
-    fi
-  fi
-
-  unmount_system
-  exit $EXIT
-}
-
-wipe_primary_cache() {
   mount_cache
 
-  for i in $(ls /cache); do
-    if [ "${i}" = "dual" ]; then
-      echo "Skipping /cache/dual/"
-      continue
-    else
-      echo "Deleting /cache/${i}"
-      rm -rf /cache/${i}
-    fi
-  done
+  case $1 in
+  primary)
+    for i in $(ls /system); do
+      case $i in
+      dual)
+        echo "Skipping /system/dual/"
+        continue
+        ;;
+      dual-kernels)
+        echo "Skipping /system/dual-kernels/"
+        continue
+        ;;
+      multi-slot-*)
+        echo "Skipping /system/$i/"
+        continue
+        ;;
+      *)
+        echo "Deleting /system/$i/"
+        rm -rf /system/$i
+        ;;
+      esac
+    done
 
+    echo "Deleting primary kernel"
+    rm -f /system/dual-kernels/primary.img
+    ;;
+
+  secondary)
+    echo "Deleting /system/dual/"
+    rm -rf /system/dual
+    echo "Deleting secondary kernel"
+    rm -f /system/dual-kernels/secondary.img
+    ;;
+
+  multi-slot-*)
+    echo "Deleting /cache/$1/"
+    rm -rf /cache/$1
+    echo "Deleting $1 kernel"
+    rm -f /system/dual-kernels/$1.img
+  esac
+
+  unmount_system
   unmount_cache
 }
 
-wipe_secondary_cache() {
+wipe_cache() {
+  mount_system
   mount_cache
-  echo "Deleting /cache/dual"
-  rm -rf /cache/dual
+
+  case $1 in
+  primary)
+    for i in $(ls /cache); do
+      case $i in
+      dual)
+        echo "Skipping /cache/dual/"
+        continue
+        ;;
+      multi-slot-*)
+        echo "Skipping /cache/$i/"
+        continue
+        ;;
+      *)
+        echo "Deleting /cache/$i/"
+        rm -rf /cache/$i
+        ;;
+      esac
+    done
+    ;;
+
+  secondary)
+    echo "Deleting /cache/dual/"
+    rm -rf /cache/dual
+    ;;
+
+  multi-slot-*)
+    echo "Deleting /system/$1/"
+    rm -rf /system/$1
+    ;;
+  esac
+
+  unmount_system
   unmount_cache
 }
 
-wipe_primary_dalvik_cache() {
-  mount_data
-  echo "Deleting /data/dalvik-cache"
-  rm -rf /data/dalvik-cache
-  unmount_data
-}
-
-wipe_secondary_dalvik_cache() {
-  mount_data
-  echo "Deleting /data/dual/dalvik-cache"
-  rm -rf /data/dual/dalvik-cache
-  unmount_data
-}
-
-wipe_primary_system() {
-  mount_system
-
-  for i in $(ls /system); do
-    if [ "${i}" = "dual" ]; then
-      echo "Skipping /system/dual/"
-      continue
-    elif [ "${i}" = "dual-kernels" ]; then
-      echo "Skipping /system/dual-kernels/"
-      continue
-    else
-      echo "Deleting /system/${i}"
-      rm -rf /system/${i}
-    fi
-  done
-
-  echo "Deleting primary kernel"
-  rm -f /system/dual-kernels/primary.img
-
-  unmount_system
-}
-
-wipe_secondary_system() {
-  mount_system
-  echo "Deleting /system/dual"
-  rm -rf /system/dual
-  echo "Deleting secondary kernel"
-  rm -rf /system/dual-kernels/secondary.img
-  unmount_system
-}
-
-wipe_primary_data() {
+wipe_data() {
   mount_data
 
-  for i in $(ls /data); do
-    if [ "${i}" = "dual" ]; then
-      echo "Skipping /data/dual/"
-      continue
-    elif [ "${i}" = "media" ]; then
-      echo "Skipping /data/media/"
-      continue
-    else
-      echo "Deleting /data/${i}"
-      rm -rf /data/${i}
-    fi
-  done
+  case $1 in
+  primary)
+    for i in $(ls /data); do
+      case $i in
+      media)
+        echo "Skipping /data/media/"
+        continue
+        ;;
+      dual)
+        echo "Skipping /data/dual/"
+        continue
+        ;;
+      multi-slot-*)
+        echo "Skipping /data/$i/"
+        continue
+        ;;
+      *)
+        echo "Deleting /data/$i/"
+        rm -rf /data/$i
+        ;;
+      esac
+    done
+    ;;
+
+  secondary)
+    echo "Deleting /data/dual/"
+    rm -rf /data/dual
+    ;;
+
+  multi-slot-*)
+    echo "Deleting /data/$1/"
+    rm -rf /data/$1
+    ;;
+  esac
 
   unmount_data
 }
 
-wipe_secondary_data() {
+wipe_dalvik_cache() {
   mount_data
-  echo "Deleting /data/dual"
-  rm -rf /data/dual
+
+  case $1 in
+  primary)
+    echo "Deleting /data/dalvik-cache/"
+    rm -rf /data/dalvik-cache
+    ;;
+
+  secondary)
+    echo "Deleting /data/dual/dalvik-cache/"
+    rm -rf /data/dual/dalvik-cache
+    ;;
+
+  multi-slot-*)
+    echo "Deleting /data/$1/dalvik-cache/"
+    rm -rf /data/$1/dalvik-cache
+    ;;
+  esac
+
   unmount_data
 }
 
@@ -197,35 +226,20 @@ save_recovery_log() {
 }
 
 case $1 in
-force-boot-primary)
-  force_boot_primary
+switch-to-*)
+  switch_to ${1#switch-to-}
   ;;
-force-boot-secondary)
-  force_boot_secondary
+wipe-system-*)
+  wipe_system ${1#wipe-system-}
   ;;
-wipe-primary-cache)
-  wipe_primary_cache
+wipe-cache-*)
+  wipe_cache ${1#wipe-cache-}
   ;;
-wipe-secondary-cache)
-  wipe_secondary_cache
+wipe-data-*)
+  wipe_data ${1#wipe-data-}
   ;;
-wipe-primary-dalvik-cache)
-  wipe_primary_dalvik_cache
-  ;;
-wipe-secondary-dalvik-cache)
-  wipe_secondary_dalvik_cache
-  ;;
-wipe-primary-system)
-  wipe_primary_system
-  ;;
-wipe-secondary-system)
-  wipe_secondary_system
-  ;;
-wipe-primary-data)
-  wipe_primary_data
-  ;;
-wipe-secondary-data)
-  wipe_secondary_data
+wipe-dalvik-cache-*)
+  wipe_dalvik_cache ${1#wipe-dalvik-cache-}
   ;;
 save-last-kmsg)
   save_last_kmsg
